--- a/src/style.css
+++ b/src/style.css
@@ -12,7 +12,7 @@ body {
     margin-top: 20px;
     min-height: 150px;
     box-sizing: border-box;
-    padding: 20px;
+    padding: 20px 40px 20px 20px;
     background-color: rgb(66, 66, 66);
     border-radius: 10px;
     display: flex;
@@ -23,6 +23,8 @@ body {
 .post__image {
     width: 150px;
     margin-right: 30px;
+    box-shadow: 0 0 0 3px rgb(39, 39, 39);
+    border-radius: 5px;
 }
 
 .post__title {
